tests/errors/module_no_leak/module_no_leak_f1.fs
module rec module_no_leak.module_no_leak_f1

// public, but not auto-open.
let f1 () = ()
